# stock

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  _typos.toml  cliff.toml  deny.toml
examples/: README.md
examples/excel/: read.rs
fixtures/: README.md  stock-config.yml
specs/: README.md
src/: lib.rs  main.rs  model.rs
src/excel/: parse.rs
src/model/: config.rs  dir.rs  log.rs  stock_excel.rs
