[package]
name = "stock"
version = "0.1.0"
authors = ["wu_zhijun <wu_zhijun@msn.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/stock"
repository = "https://github.com//stock"
homepage = "https://github.com//stock"
description = ""
readme = "README.md"
categories = ["development-tools"]
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = { version = "0.30.0", features = ["dates"] }
chrono = "0.4.41"

[[example]]
name = "read_excel"
path = "examples/excel/read.rs"
