[package]
name = "stock"
version = "0.1.0"
authors = ["wu_zhijun <wu_zhijun@msn.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/stock"
repository = "https://github.com//stock"
homepage = "https://github.com//stock"
description = "股票分析系统"
readme = "README.md"
categories = ["development-tools"]
keywords = ["stock","rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# excel
calamine = { version = "0.30.0", features = ["dates"] }
chrono = "0.4.41"
# 日志处理
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time", "local-time"] }
# 时间
time = { version = "0.3.41", features = ["macros"]}
# 执行 shell 扩展
shellexpand = "3.1.1"
serde = { version = "1.0.219" , features = ["derive"] }
# yaml文件处理
serde_yaml = "0.9.34"
serde_json = "1.0.143"
serde_with = "3.14.0"
# 任意错误
anyhow = "1.0.99"

[[example]]
name = "read_excel"
path = "examples/excel/read.rs"
